--- a/src/scss/modules/_one_column_txt_container.scss
+++ b/src/scss/modules/_one_column_txt_container.scss
@@ -12,6 +12,8 @@
 			text-transform: uppercase;
 			background: $feature-color;
 			padding: 0.5em 1em;
+			float: left;
+			margin: 0.2em;
 		}
 	}
 }
